--- a/source/index.html
+++ b/source/index.html
@@ -1,30 +1,30 @@
 ---
 layout: default
 ---
+ 
+<div>
+{% assign index = true %}
+<article role="article">
+<div id="blog-archives">
+  {% for post in site.posts reverse %}
 
-<div class="blog-index">
-  {% assign index = true %}
-  {% for post in paginator.posts %}
-  {% assign content = post.content %}
+  {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+  {% unless year == this_year %}
+    {% assign year = this_year %}
+    <h2>{{ year }}</h2>
+  {% endunless %}
     <article>
-      {% include article.html %}
+      {% include archive_post.html %}
     </article>
   {% endfor %}
-  <div class="pagination">
-    {% if paginator.next_page %}
-      <a class="previous btn btn-light" href="{{paginator.next_page}}">&larr; Older</a>
-    {% endif %}
-    <a class="archives btn btn-light" href="/blog/archives">Blog Archives</a>
-    {% if paginator.previous_page %}
-    <a class="next btn btn-light" href="{{paginator.previous_page}}">Newer &rarr;</a>
-    {% endif %}
-  </div>
+</div>
+</article>
 </div>
 
-{% if site.blog_index_asides.size %}
 <aside class="sidebar">
+  {% if site.blog_index_asides.size %}
     {% include_array blog_index_asides %}
   {% else %}
     {% include_array default_asides %}
+  {% endif %}
 </aside>
-{% endif %}
