--- a/source/index.html
+++ b/source/index.html
@@ -1,26 +1,25 @@
 ---
 layout: default
 ---
- 
-<div>
-{% assign index = true %}
-<article role="article">
-<div id="blog-archives">
-  {% for post in site.posts reverse %}
 
-  {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-  {% unless year == this_year %}
-    {% assign year = this_year %}
-    <h2>{{ year }}</h2>
-  {% endunless %}
+<div class="blog-index">
+  {% assign index = true %}
+  {% for post in paginator.posts %}
+  {% assign content = post.content %}
     <article>
-      {% include archive_post.html %}
+      {% include article.html %}
     </article>
   {% endfor %}
+  <div class="pagination">
+    {% if paginator.next_page %}
+      <a class="prev" href="{{paginator.next_page_path}}">&larr; Older</a>
+    {% endif %}
+    <a href="/blog/archives">Blog Archives</a>
+    {% if paginator.previous_page %}
+    <a class="next" href="{{paginator.previous_page_path}}">Newer &rarr;</a>
+    {% endif %}
+  </div>
 </div>
-</article>
-</div>
-
 <aside class="sidebar">
   {% if site.blog_index_asides.size %}
     {% include_array blog_index_asides %}
